feat: global API key support, code quality improvements, and vLLM enhancements
- Add global API key feature via LLM_DOCK_API_KEY environment variable
  - Display API key in dashboard header next to Logout button
  - Add copy-to-clipboard functionality for global API key
  - Add "Use Global" button in service forms to quickly apply global key
  - New API endpoint: GET /api/global-api-key

- Code quality improvements
  - Reformat app.py for consistency (imports, quotes, spacing)
  - Remove unused imports from compose_manager.py and openwebui_integration.py
  - Simplify API endpoints (remove /v2/ prefix)
  - Add selection preservation when viewing logs to prevent losing text selection

- Build and deployment improvements
  - Update vLLM Dockerfile to base on v0.15.1 for simpler builds
  - Remove --no-cache flag from build-vllm.sh for faster rebuilds
  - Simplify start.sh to dashboard-only startup
  - Update vllm template to use llm-dock-vllm image

- Add vLLM benchmark utility script for performance testing

--- a/dashboard/.env.example
+++ b/dashboard/.env.example
@@ -4,3 +4,4 @@ DASHBOARD_HOST=127.0.0.1
 COMPOSE_PROJECT_NAME=llm-dock
 COMPOSE_FILE=../docker-compose.yml
 LOG_LEVEL=INFO
+LLM_DOCK_API_KEY=your-global-api-key-here
